Standardize FastHotkey to v0.1.0, add jitpack.yml, fix POMs